blocks/content.css
.content {
  max-width: 1184px;
  margin: 0 auto;
  padding: 0 16px;
}

@media screen and (max-width: 768px) {
  .content {
    max-width: 768px;
    padding: 0;
  }
}

@media screen and (max-width: 656px) {
  .content {
    max-width: 656px;
  }
}

